# mnist-from-scratch

./: .gitignore  README.md  embedding.npy  mnist_from_scratch.py  model_weights.npz  notebook.py  pyproject.toml  skills-lock.json  visualizing-embedding.py
__marimo__/session/: mnist_from_scratch.py.json  notebook.py.json
